# Test_pr

test_pr/: .env.example  README.md  manage.py  pyproject.toml  seed_demo.py
test_pr/access/: admin_views.py  models.py  serializers.py  urls.py  utils.py
test_pr/accounts/: auth.py  models.py  permissions.py  serializers.py  views.py
test_pr/resources/: urls.py  views.py
test_pr/test_pr/: settings.py  urls.py  wsgi.py
test_pr/tests/: test_auth.py  test_profile.py  test_rbac.py  test_utils.py
